--- a/src/Emoji.css
+++ b/src/Emoji.css
@@ -1,4 +1,6 @@
-
+body{
+    background-color: rgb(153, 153, 216);
+}
   .container {
     display: flex;
     flex-wrap: wrap;
@@ -55,7 +57,7 @@
   }
 
   h1 {
-   
+    font-style: italic;
     margin-top:  15px;
     font-size: 24px;
     margin-bottom: 20px;
